# chordlib

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/inputs/: mod.rs
src/inputs/chord_pro/: iter_part.rs  iter_section.rs  mod.rs
src/inputs/ultimate_guitar/: iter_part.rs  iter_section.rs  iter_tab.rs  mod.rs
src/outputs/: chord_pro.rs  mod.rs  outputline.rs  render.rs
src/types/: chord.rs  chord_simple.rs  line.rs  mod.rs  part.rs  section.rs  song.rs
