[package]
name = "chordlib"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"], optional = true }
reqwest = { version = "0.12.5", features = ["blocking"], optional = true }
scraper = { version = "0.19.0", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.120"

[features]
ultimate_guitar = ["reqwest", "scraper"]
bin = ["clap"]

